# openarm_ws

./: MUJOCO_LOG.TXT  README.md  README_details.md  frames_2026-01-08_16.26.57.gv
openarm_mujoco/: demo.py
openarm_mujoco/v1/: demo.py  openarm_bimanual.xml  openarm_bimanual_cam_v3.xml  scene.xml
openarm_mujoco/v1/meshes/011_banana/: textured.obj.mtl
src/mujoco_ros2/: CMakeLists.txt
src/mujoco_ros2/model/: scene.xml
src/mujoco_ros2_control/mujoco_ros2_control/src/: mujoco_cameras.cpp  mujoco_ros2_control_node.cpp
src/openarm_description/urdf/robot/: openarm_robot.xacro  v10.urdf.xacro
src/openarm_description/urdf/ros2_control/: openarm.bimanual.ros2_control.xacro  openarm.ros2_control.xacro
src/openarm_grasp_planner/openarm_grasp_planner/: grasp_planner.py  gripper_controller.py
src/openarm_mujoco_viewer/: package.xml  setup.cfg  setup.py
src/openarm_mujoco_viewer/openarm_mujoco_viewer/: openarm_bimanual_viewer.py
src/openarm_ros2/openarm_bimanual_moveit_config/config/: moveit.rviz  openarm_bimanual.srdf
src/openarm_ros2/openarm_bimanual_moveit_config/launch/: move_group.launch.py
src/openarm_ros2/openarm_bringup/launch/: openarm_bimanual_mujoco.launch.py  openarm_bimanual_mujoco_moveit.launch.py  openarm_mujoco.launch.py
src/openarm_vision/: package.xml  setup.cfg  setup.py
src/openarm_vision/openarm_vision/: banana_detector.py  virtual_camera.py
